remove old project files

--- a/BookWebSite01/Client/Pages/Index.razor
+++ b/BookWebSite01/Client/Pages/Index.razor
@@ -7,3 +7,8 @@
 Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
+
+<div>
+    <h1 id="index-title">Hello !!!</h1>
+    <button id="index-btn" class="btn btn-dark">Hi!</button>
+</div>
