add sticky css to make navbar sticky to the page top

--- a/BookSiteServer/wwwroot/css/site.css
+++ b/BookSiteServer/wwwroot/css/site.css
@@ -20,3 +20,13 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+.content {
+    padding-top: 65px;
+}
