add sticky css to make navbar stick to the page top position

--- a/BookSiteServer/Views/Shared/_Layout.cshtml.css
+++ b/BookSiteServer/Views/Shared/_Layout.cshtml.css
@@ -46,3 +46,13 @@ button.accept-policy {
   white-space: nowrap;
   line-height: 60px;
 }
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+.content {
+    padding-top: 65px;
+}
