clear unnecessary css classes

--- a/BookSiteServer/Views/Shared/_Layout.cshtml
+++ b/BookSiteServer/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
             </div>
         </nav>
     </header>
-    <div class="container content">
+    <div class="@*container*@ content">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
