add title to the NewNovels razor page

--- a/BookSiteServer/Views/Home/NewNovels.cshtml
+++ b/BookSiteServer/Views/Home/NewNovels.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model BookSiteServer.Views.Home.NewNovelsModel
 @{
+    ViewData["Title"] = "New Novels Page";
 }
 
 <div class="container-fluid bg-info">
