add new views to the project

--- a/BookSiteServer/Views/Home/NewNovels.cshtml
+++ b/BookSiteServer/Views/Home/NewNovels.cshtml
@@ -1,11 +1,4 @@
-﻿@page
-@model BookSiteServer.Views.Home.NewNovelsModel
-@{
-    ViewData["Title"] = "New Novels Page";
-}
-
-<div class="container-fluid bg-info">
-    <div>
-        <h1>Hi!!!, this is new novels</h1>
-    </div>
+﻿
+<div>
+    <h1>New Novels</h1>
 </div>
