--- a/BookSiteServer/Views/Home/Categories.cshtml
+++ b/BookSiteServer/Views/Home/Categories.cshtml
@@ -1,11 +1,4 @@
-﻿@page
-@model BookSiteServer.Views.Home.CategoriesModel
-@{
-    ViewData["Title"] = "Categories Page";
-}
-
-<div class="container-fluid">
-    <div>
-        <h1>Hi !!!, This is the Categories Page</h1>
-    </div>
+﻿
+<div>
+    <h1>Categories</h1>
 </div>
