--- a/BookSiteServer/Views/Home/Index.cshtml.css
+++ b/BookSiteServer/Views/Home/Index.cshtml.css
@@ -1,5 +1,5 @@
 ﻿
-.index-body {
+/*.index-body {
     width: 100%;
     height: 100vh;
     background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url('img/img01.jpg');
@@ -8,4 +8,371 @@
     padding-top: 60px;
     color: white;
     font-weight: bold;
+}*/
+
+.index_container {
+    display: flex;
+    flex-direction: column;
+    /*gap: 10px;*/
 }
+
+.index_container_top {
+    display: flex;
+    height: 95vh;
+}
+
+/*.index_container_left {
+    width: 50%;
+    background-color: blue;
+}
+
+.index_container_right {
+    width: 50%;
+    background-color: red;
+    border-top-left-radius: 100%;
+}*/
+
+.index_container_logout {
+    color: #212529;
+    width: 100%;
+    /*background: red;*/
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    padding-top: 100px;
+    background-image: linear-gradient(rgba(255,255,255,0.8),rgba(255,255,255,1)), url(./img/img02.jpg);
+    background-size: cover;
+    /*display: flex;*/
+}
+
+    .index_container_logout h1 {
+        font-size: 70px;
+        font-family: 'Times New Roman', Times, serif;
+    }
+
+    .index_container_logout p {
+        font-size: 20px;
+        font-family: 'Times New Roman', Times, serif;
+        font-style: italic;
+        font-weight: bold;
+    }
+
+.index_container_account_btn {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+}
+
+    .index_container_account_btn button {
+        color: #212529;
+        width: 160px;
+        padding: 5px 0;
+        font-weight: bold;
+        text-align: center;
+        margin: 10px 5px;
+        border-radius: 25px;
+        background-color: transparent;
+        cursor: pointer;
+        border: 2px solid #212529;
+        position: relative;
+        overflow: hidden;
+        z-index: 1;
+    }
+
+        .index_container_account_btn button span {
+            background-color: #212529;
+            /*color: white;*/
+            height: 100%;
+            width: 0;
+            border-radius: 25px;
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            z-index: 1;
+            transition: 0.5s;
+        }
+
+        .index_container_account_btn button:hover {
+            color: white;
+            border: none;
+            transition: 0.25s;
+        }
+
+        .index_container_account_btn button:hover span {
+            width: 100%;
+            z-index: -1;
+        }
+
+@media (max-width: 575px) {
+    .index_container_logout {
+        padding-top: 100px;
+        
+    }
+
+    .index_container_account_btn {
+        padding-top: 20px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+.index_container_logon {
+    height: 95vh;
+    background-color: red;
+}
+
+.index_container_newBooks {
+    height: 95vh;
+    display: flex;
+    flex-direction: column;
+    background-color: #FFFFFF;
+    /*padding-top: 10px;*/
+    /*padding-left: 30px;*/
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.index_container_title {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 20px;
+    padding-left: 30px;
+}
+
+    .index_container_title h1 {
+        /*margin-top: 10px;
+        margin-left: 30px;*/
+    }
+
+    .index_container_newBooks_content {
+        height: 400px;
+        display: flex;
+        flex-direction: row;
+        overflow-x: scroll;
+        margin-left: 20px;
+        margin-top: 30px;
+        padding: 10px;
+        background-color: #E6E6E6;
+        align-items: center;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    }
+
+        .index_container_book {
+            height: 250px;
+            width: 150px;
+            display: flex;
+            flex-direction: column;
+            flex-shrink: 0;
+            /*box-shadow: 0 4px 8px 0 rgba(0,0,0,0.9);*/
+            margin: 10px;
+            cursor: pointer;
+            background-color: white;
+            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        }
+
+            .index_container_book:hover {
+                box-shadow: 0 4px 8px 0 rgba(0,0,0,0.9);
+            }
+
+            .index_container_book_img {
+                background-size: cover;
+                width: 100%;
+                height: 150px;
+            }
+
+            .index_container_book_title {
+                font-weight: bold;
+                font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                text-transform: capitalize;
+                padding: 5px;
+            }
+
+            .index_container_book_info {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                font-size: 12px;
+                color: gray;
+                padding-inline: 5px;
+            }
+
+                .index_container_book_info_gen {
+                    text-transform: capitalize;
+                }
+
+            .index_container_book_time {
+                font-size: 12px;
+                color: gray;
+                padding-inline: 5px;
+                margin-top: 5px;
+                margin-bottom: 20px;
+            }
+
+.index_container_viewMore_right {
+    text-decoration: none;
+    font-style: italic;
+    margin-right: 30px;
+    margin-top: 10px;
+}
+
+.index_container_viewMore_right:hover {
+    cursor: pointer;
+    color: red;
+}
+
+.index_container_app {
+    height: 95vh;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    /*background-color: aqua;*/
+    background-image: linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0.8)), url(./img/img04.jpg);
+    background-size: cover;
+    background-position: center;
+    align-items: center;
+}
+
+    .index_container_app_info {
+        height: 70vh;
+        width: 70vw;
+        /*margin-inline: 150px;*/
+        border-bottom-left-radius: 200vh;
+        border-bottom-right-radius: 200vh;
+        background-color: white;
+        flex-shrink: 1;
+        display:flex;
+        /*font-weight: bold;*/
+        flex-direction: column;
+        align-items: center;
+        padding-top: 50px;
+        font-family: 'Times New Roman', Times, serif;
+    }
+
+            .index_container_app_info h2 {
+                font-weight: bold;
+                font-display:block;
+            }
+
+            .index_container_app_info h5 {
+                font-style: italic;
+                text-transform: capitalize;
+            } 
+
+    /*.index_container_app_img {
+        height: 50%;
+        background-color: rebeccapurple;
+        border-bottom-left-radius: -500% -1000%;
+        border-bottom-right-radius: - 50%;
+    }*/
+
+@media (max-width: 768px) {
+    .index_container_app_info {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        /*justify-content: center;*/
+        align-items: center;
+        font-family: 'Times New Roman', Times, serif;
+        border-style: none;
+        background-color: transparent;
+        padding-top: 30vh;
+    }
+}
+
+
+.index_container_social {
+    height: 95vh;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    /*background-color: aqua;*/
+    background-image: linear-gradient(to top,rgba(255,255,255,1),rgba(255,255,255,0.8)), url(./img/img05.jpg);
+    background-size: cover;
+    background-position: center;
+    align-items: center;
+    justify-content: end;
+}
+
+    .index_container_social_info {
+        /*bottom: 0;*/
+        height: 70vh;
+        width: 70vw;
+        /*margin-inline: 150px;*/
+        border-top-left-radius: 200vh;
+        border-top-right-radius: 200vh;
+        background-color: white;
+        flex-shrink: 1;
+        display: flex;
+        /*font-weight: bold;*/
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        /*padding-bottom: 50px;*/
+        font-family: 'Times New Roman', Times, serif;
+    }
+
+        .index_container_social_info h2 {
+            font-weight: bold;
+            font-display: block;
+            text-transform: capitalize;
+        }
+
+        .index_container_social_info h5 {
+            font-style: italic;
+            text-transform: capitalize;
+        }
+
+@media (max-width: 768px) {
+    .index_container_social {
+        
+    }
+
+    .index_container_social_info {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        /*justify-content: center;*/
+        align-items: center;
+        font-family: 'Times New Roman', Times, serif;
+        border-style: none;
+        background-color: transparent;
+        padding-bottom: 30vh;
+        top: 0;
+    }
+}
+
+.index_container_updates {
+    height: 95vh;
+    background-color: red;
+}
+
+.index_container_ranking {
+    height: 95vh;
+    background-color: red;
+}
+
+.index_container_recommends {
+    height: 95vh;
+    display: flex;
+    flex-direction: column;
+    background-color: #FFFFFF;
+    /*padding-top: 10px;*/
+    /*padding-left: 30px;*/
+    font-family: 'Times New Roman', Times, serif;
+}
+
+    .index_container_recommends_content {
+        height: 70vh;
+        display: flex;
+        /*flex-direction: row;*/
+        overflow-y: scroll;
+        margin-inline: 20px;
+        margin-top: 30px;
+        padding: 10px;
+        background-color: #E6E6E6;
+        align-items: center;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        flex-wrap: wrap;
+    }
