modify views acording to new interfaces

--- a/BookSiteServer/Views/Home/ChapterView.cshtml
+++ b/BookSiteServer/Views/Home/ChapterView.cshtml
@@ -1,5 +1,18 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿
+@model int
+
+<div class="displayNovels_container">
+
+    <div class="displayNovels_container_title">
+        <h2>Novels Archives for : @Model</h2>
+    </div>
+
+    <div class="displayNovels_container_content">
+        <p>dwi lwidjl a;wp owao wdwn jbwbfwoadn nwudwba wdw,hwiadnj bd dadiwajdnasdns nwadliwjdasldk dhwakd jbwkdwadki lkdwa wjal wjalidwa</p>
+        <p>dbiwahduwo jwoiadjp waj iwnudwbr waodpwap ; wjfwap jd nlwadi waojdlk kadladksnd wialddal</p>
+        <p>dwadw awdwa awdwr grfsf wafesfa</p>
+    </div>
+
+
+
+</div>
