--- a/BookSiteServer/Views/Home/NewNovels.cshtml
+++ b/BookSiteServer/Views/Home/NewNovels.cshtml
@@ -1,4 +1,6 @@
 ﻿
 <div>
     <h1>New Novels</h1>
+    <a class="p-5 m-5" asp-controller="Home" asp-action="AddAuthor">Add Author  test</a>
+    <a class="p-5 m-5" asp-controller="Home" asp-action="UpdateAuthor">Add Author Name  test</a>
 </div>
