--- a/BookSiteServer/Views/Home/DisplayNovels.cshtml.css
+++ b/BookSiteServer/Views/Home/DisplayNovels.cshtml.css
@@ -2,7 +2,7 @@
 
 .displayNovels_container {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     background-color: #E6E6E6;
 }
 
@@ -16,8 +16,72 @@
 }
 
 .displayNovels_container_content {
-    height: 20vh;
     width: 100%;
     background-color: white;
+    gap: 10px;
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
     /*margin: 5px 0px;*/
+}
+
+.displayNovels_container_book {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 20vw;
+    /*background-color: antiquewhite;*/
+    /*height: 20vw;*/
+    flex-shrink: 0;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+    .displayNovels_container_book:hover {
+        cursor: pointer;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.9);
+    }
+
+.displayNovels_container_book_img {
+    background-image: url(./img/book01.jpg);
+    background-size: cover;
+    width: 20vw;
+    height: 20vw;
+    /*background-color: aqua;*/
+}
+
+.displayNovels_container_book_title {
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-transform: capitalize;
+    margin-top: 5px;
+    padding: 5px;
+}
+
+.displayNovels_container_book_rate {
+    margin-bottom: 5px;
+}
+
+@media (575px < width < 671px) {
+    .displayNovels_container_book {
+        width: 30vw;
+        /*height: 30vw;*/
+    }
+
+    .displayNovels_container_book_img {
+        width: 30vw;
+        height: 30vw;
+    }
+}
+
+@media (width <= 575px) {
+    .displayNovels_container_book {
+        width: 40vw;
+        /*height: 40vw;*/
+    }
+
+    .displayNovels_container_book_img {
+        width: 40vw;
+        height: 40vw;
+    }
 }
