--- a/BookSiteServer/Views/_ViewImports.cshtml
+++ b/BookSiteServer/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using BookSiteServer
 @using BookSiteServer.Models
+@using BookSiteServer.Services
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
