--- a/BookSiteServer/Views/Shared/_Layout.cshtml
+++ b/BookSiteServer/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 sticky">
             <div class="container-fluid csss_nav">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">YR Novels</a>
+                <a class="navbar-brand " asp-area="" asp-controller="Home" asp-action="Index">YR Novels</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,13 +20,16 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between ">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark " asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Categories">Categories</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Library">Library</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark css_test" asp-area="" asp-controller="Home" asp-action="DisplayNovels">Test</a>
                         </li>
                     </ul>
                 </div>
@@ -48,6 +51,8 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="../Views/Home/Index.cshtml.js"></script>
+    <script src="../Views/Home/DisplayNovels.cshtml.js" asp-append-version="true"></script>
+    <script src="../Views/Home/ChapterView.cshtml.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 
     @*<script>
