add view display message

--- a/BookSiteServer/Views/Warning/UnauthorizedView.cshtml
+++ b/BookSiteServer/Views/Warning/UnauthorizedView.cshtml
@@ -1,1 +1,39 @@
 ﻿
+<style>
+    .notfound_body {
+        height: 60vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-transform: capitalize;
+        font-weight: bold;
+    }
+
+    .notfound_body_title01 {
+        text-transform:uppercase;
+        font-size: 90px;
+    }
+
+    .notfound_body_title02 {
+        display: flex;
+        font-size: 30px;
+        text-transform: capitalize;
+        text-align: center;
+    }
+
+    .notfound_body_content {
+        text-align: center;
+        padding-inline: 20px;
+        display: flex;
+        justify-content: center;
+        font-weight: normal;
+        font-size: 20px;
+    }
+</style>
+
+<div class="notfound_body">
+    <div class="notfound_body_title01">unauthorized</div>
+    <div class="notfound_body_title02">beware of what you are looking for</div>
+    <div class="notfound_body_content">content you search for is not authorized for you to view</div>
+</div>
